Add files for data generation

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ bundle-prod.js
 
 coverage/
 
+restaurants/data
+restaurants/csv-data
+reservations/data
+reservations/csv-data
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
