--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "mockdate": "^2.0.2",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.14",
+    "mongodb": "^3.0.4",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
     "probability-distributions": "^0.9.1",
