--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.14",
     "mongodb": "^3.0.4",
+    "mongoose": "^5.0.11",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
     "probability-distributions": "^0.9.1",
