--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.11",
     "morgan": "^1.9.0",
+    "newrelic": "^3.2.0",
     "pg": "^7.4.1",
     "probability-distributions": "^0.9.1",
     "prop-types": "^15.6.0",
